--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "InstantReserve"
+name = "app"
 dynamic = ["version"]
 description = 'A website that consolidates different business reservations into one place'
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = []
 authors = [
