--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -24,7 +24,14 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = []
+dependencies = [
+  "fastapi[all]>=0.115.4",
+  "passlib[bcrypt]>=1.7.4",
+  "pydantic-settings>=2.6.0",
+  "pyjwt>=2.9.0",    "python-dotenv>=1.0.1",
+  "sqlalchemy>=2.0.36",
+  "sqlmodel>=0.0.22",
+]
 
 [project.urls]
 Documentation = "https://github.com/U.N. Owen/app#readme"
