delete dependencies external file

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
   "fastapi[all]>=0.115.4",
   "passlib[bcrypt]>=1.7.4",
   "pydantic-settings>=2.6.0",
-  "pyjwt>=2.9.0",    "python-dotenv>=1.0.1",
+  "pyjwt>=2.9.0",    
+  "python-dotenv>=1.0.1",
   "sqlalchemy>=2.0.36",
   "sqlmodel>=0.0.22",
 ]
