--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
   "passlib[bcrypt]>=1.7.4",
   "pydantic-settings>=2.6.0",
   "pyjwt>=2.9.0",    
+  "pylance>=0.19.2",
   "python-dotenv>=1.0.1",
   "sqlalchemy>=2.0.36",
   "sqlmodel>=0.0.22",
