messing with structure

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -36,9 +36,8 @@ dependencies = [
 ]
 
 [project.urls]
-Documentation = "https://github.com/U.N. Owen/app#readme"
-Issues = "https://github.com/U.N. Owen/app/issues"
-Source = "https://github.com/U.N. Owen/app"
+Documentation = "https://github.com/alsharifm/InstantReserve-App/README.txt"
+Source = "https://github.com/alsharifm/InstantReserve-App"
 
 [tool.hatch.version]
 path = "src/app/__about__.py"
