migrated from sql to postgres

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,5 @@
-SQLALCHEMY_DATABASE_URL=sqlite:///database.db
+SQLALCHEMY_DATABASE_URL=postgresql://postgres:password@db:5432/instant_reserve_db
 SECRET_KEY="secretkey"
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=instant_reserve_db
