--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -27,8 +27,9 @@ classifiers = [
 dependencies = [
   "fastapi[all]>=0.115.4",
   "passlib[bcrypt]>=1.7.4",
+  "psycopg2-binary>=2.9.10",
   "pydantic-settings>=2.6.0",
-  "pyjwt>=2.9.0",    
+  "pyjwt>=2.9.0",
   "python-dotenv>=1.0.1",
   "sqlalchemy>=2.0.36",
   "sqlmodel>=0.0.22",
@@ -48,6 +49,7 @@ path = ".venv"
 
 [tool.hatch.envs.default.scripts]
 dev = "uvicorn app.main:app --reload"
+start = "uvicorn src.app.main:app --host 0.0.0.0 --port 8000"
 
 [tool.hatch.envs.default.en-vars]
 PYTHONASYNCIODEBUG = "1"
