added PYTHONPATH in the pyproject file

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -48,7 +48,7 @@ installer = "uv"
 path = ".venv"
 
 [tool.hatch.envs.default.scripts]
-dev = "uvicorn app.main:app --reload"
+dev = "PYTHONPATH=src uvicorn app.main:app --reload"
 start = "uvicorn src.app.main:app --host 0.0.0.0 --port 8000"
 
 [tool.hatch.envs.default.en-vars]
